Fixed responsive appearance of Search page for mobile site, problem persists on tablets but will be fixed when back-end correctly implements pagination functionality. Changed viewing member information to popups

--- a/src/Components/MemberArray/MemberArray.css
+++ b/src/Components/MemberArray/MemberArray.css
@@ -18,8 +18,9 @@
 }
 
 .MemberArray .searchResult{
+    display: grid;
+    grid-template-rows: 8fr 0.5fr;
     height: 100%;
-    margin: 1vw 0 1vmin 0;
 }
 
 .MemberArray .data{
@@ -105,9 +106,6 @@
 }
 
 .MemberArray .pagination {
-    position: absolute;
-    left: 0;
-    right: 0;
     margin-left: auto;
     margin-right: auto;
     display: grid;
@@ -115,7 +113,6 @@
     font-family: Arial, Helvetica, sans-serif;
     justify-items: center;
     align-items: center;
-    bottom: 3vh;
 }
 
 @media (orientation: landscape) {
